--- a/index.html
+++ b/index.html
@@ -47,17 +47,18 @@
         <!-- end semiopacity -->
     </div>
     <!-- end head-section -->
+
     <!-- begin about-section -->
     <div class="about-section">
         <h3 class="green-title">ABOUT Naql</h3>
         <p class="about-section-des">Naql is the best search engine for finding a suitable <br> transportation method</p>
+        <!--begin  content clearfix-->
+        <div class=" clearfix">
         <!-- begin container -->
         <div class="container">
+            <!-- begin about -->
+            <div class="about">
 
-        <!-- begin about -->
-        <div class="about">
-            <!--begin  content clearfix-->
-            <div class=" clearfix">
             <!-- begin about-col -->
             <div class="about-col">
                 <div class="about-col-img" style="background-image:url(img/reg.png)"></div>
@@ -69,7 +70,7 @@
             <div class="about-col">
                 <div class="about-col-img" style="background-image:url(img/search.png)"></div>
                 <div class="about-col-des">
-                    <p>Search using multiple <br> parametes</p>
+                    <p>Search using multiple <br> parameters</p>
                 </div>
             </div>
             <!-- end about-col -->
@@ -78,30 +79,59 @@
                 <div class="about-col-des">
                     <p>Come back again <br> we'r here all the time</p>
                 </div>
-                </div>
-                <!-- end about-col -->
-          </div>
-          <!-- end clearfix -->
+            </div>
+            <!-- end about-col -->
+            </div>
+            <!-- end about -->
+            </div>
+            <!-- end container -->
         </div>
-        <!-- end about -->
-        </div>
-        <!-- end container -->
+        <!-- end clearfix -->
     </div>
     <!-- end about-section -->
 
     <!-- begin search-section -->
     <div class="search-section" style="background-image:url(img/graphic.png)">
+                <h3 class="green-title">SEARCH</h3>
+                <!-- begin container -->
                 <div class="container">
-              <!-- begin btn-go -->
-              <div class="btn-go">
-                <span class="go-padding">Chose city</span>
-              </div>
-              <!-- end btn-go -->
+                <select class="list">
+                    <option class="city" value="Choose city">Choose city</option>
+                    <option class="city" value="New York">New York</option>
+                    <option class="city" value="Miami">Miami</option>
+                    <option class="city" value="Los Angales">Los Angeles</option>
+                </select>
+
         </div>
         <!-- end container -->
     </div>
     <!-- end search-section -->
 
+    <!-- begin login-section -->
+    <div class="login-section">
+          <h3 class="green-title" style ="color:white;">LOGIN </h3>
+            <!-- begin container -->
+            <div class="container">
+              <form class="form-style">
+                  <input type="text" required class="form-control" placeholder="Username or mobile number">
+                  <input type="text" required class="form-control" placeholder="Password">
+                    <!-- begin check-btns -->
+                      <div class="check-btns clearfix">
+                        <label class=""style="color:white;"><input type="checkbox" name="personality"> Remember me ?</label>
+                        <a class="password" href="">Forgot password</a>
+                      </div>
+                    <!-- end check-btns clearfix-->
+                    <div class="btn-center">
+                         <button type="submit" class="login-button">Login</button>
+                         <p style ="color:white;">Dont't have an account ? &nbsp;&nbsp;&nbsp;<a href="">Sign Up</a></p>
+                    </div>
+             </form>
+            </div>
+            <!-- end container -->
+
+
+    </div>
+    <!-- end login-section -->
 
 
 
