add responsive sidebar menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,29 @@
 
 <!-- begin page -->
 <div class="page">
-    <!-- begin head-section -->
+      <div class="nav-right visible-xs">
+  <div class="button" id="btn">
+    <div class="bar top"></div>
+    <div class="bar middle"></div>
+    <div class="bar bottom"></div>
+  </div>
+</div>
+<!-- nav-right -->
+<div class="main">
+
+
+  <nav>
+    <div class="nav-right hidden-xs">
+      <div class="button" id="btn">
+        <div class="bar top"></div>
+        <div class="bar middle"></div>
+        <div class="bar bottom"></div>
+      </div>
+    </div>
+    <!-- nav-right -->
+  </nav>
+
+          <!-- begin head-section -->
     <div class="head-section" style="background-image:url(img/baner.jpg)">
         <!-- begin semiopacity -->
         <div class="semiopacity">
@@ -22,7 +44,7 @@
                 <!--begin  content clearfix-->
                 <div class=" clearfix">
                 <a href=""><h1 class="logo">Naql</h1></a>
-                    <nav>
+                    <nav class="nav-desktop">
                         <ul>
                             <li><a href="#" class="header-btn">Contact us</a></li>
                             <li><a href="#" class="header-btn">About us</a></li>
@@ -48,7 +70,7 @@
     </div>
     <!-- end head-section -->
 
-    <!-- begin about-section -->
+       <!-- begin about-section -->
     <div class="about-section">
         <h3 class="green-title">ABOUT Naql</h3>
         <p class="about-section-des">Naql is the best search engine for finding a suitable <br> transportation method</p>
@@ -90,7 +112,7 @@
     <!-- end about-section -->
 
     <!-- begin search-section -->
-    <div class="search-section" style="background-image:url(img/graphic.png)">
+    <div class="search-section" style="background-image:url(img/graphic.jpg)">
                 <h3 class="green-title">SEARCH</h3>
             <!-- begin container -->
             <div class="container">
@@ -139,7 +161,7 @@
     <!-- end login-section -->
     <!-- begin footer -->
     <div class="footer">
-
+        <p style="color:white;">Responsive Sidebar Menu by<a style="color:#00bcd4" href="https://codemyui.com/responsive-sidebar-menu/"> Antonija Simic/codemyui.com</a></p>
     </div>
     <!-- end footer -->
 
@@ -147,7 +169,30 @@
 
 
 </div>
+    <!-- end main -->
+
+<div class="sidebar">
+  <ul class="sidebar-list">
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Home</a></li>
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Packages</a></li>
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">About us</a></li>
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact us</a></li>
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Log In</a></li>
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Sign UP</a></li>
+  </ul>
+</div>
+
+
+
+
+
+
+
+</div>
 <!-- end page -->
+
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/collapse.js"></script>
 </body>
 </html>
 
