--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- end head-section -->
 
        <!-- begin about-section -->
-    <div class="about-section">
+    <div class="about-section" id ="about">
         <h3 class="green-title">ABOUT Naql</h3>
         <p class="about-section-des">Naql is the best search engine for finding a suitable <br> transportation method</p>
         <!-- begin container -->
@@ -161,7 +161,7 @@
     <!-- end login-section -->
     <!-- begin footer -->
     <div class="footer">
-        <p style="color:white;">Responsive Sidebar Menu by<a style="color:#00bcd4" href="https://codemyui.com/responsive-sidebar-menu/"> Antonija Simic/codemyui.com</a></p>
+        <p style="color:white;padding-left: 10px;">Responsive Sidebar Menu by<a style="color:#00bcd4" href="https://codemyui.com/responsive-sidebar-menu/"> Antonija Simic/codemyui.com</a></p>
     </div>
     <!-- end footer -->
 
@@ -175,7 +175,7 @@
   <ul class="sidebar-list">
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Home</a></li>
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Packages</a></li>
-    <li class="sidebar-item"><a href="#" class="sidebar-anchor">About us</a></li>
+    <li class="sidebar-item"><a href="#about" class="sidebar-anchor">About us</a></li>
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact us</a></li>
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Log In</a></li>
     <li class="sidebar-item"><a href="#" class="sidebar-anchor">Sign UP</a></li>
