fix sidebar menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,191 +9,169 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-
-
-<!-- begin page -->
-<div class="page">
-      <div class="nav-right visible-xs">
-  <div class="button" id="btn">
-    <div class="bar top"></div>
-    <div class="bar middle"></div>
-    <div class="bar bottom"></div>
-  </div>
-</div>
-<!-- nav-right -->
-<div class="main">
-
-
-  <nav>
-    <div class="nav-right hidden-xs">
-      <div class="button" id="btn">
-        <div class="bar top"></div>
-        <div class="bar middle"></div>
-        <div class="bar bottom"></div>
-      </div>
-    </div>
-    <!-- nav-right -->
-  </nav>
-
-          <!-- begin head-section -->
-    <div class="head-section" style="background-image:url(img/baner.jpg)">
-        <!-- begin semiopacity -->
-        <div class="semiopacity">
-            <!-- begin header -->
-            <div class="header" >
-                <!--begin  content clearfix-->
-                <div class=" clearfix">
-                <a href=""><h1 class="logo">Naql</h1></a>
-                    <nav class="nav-desktop">
-                        <ul>
-                            <li><a href="#" class="header-btn">Contact us</a></li>
-                            <li><a href="#" class="header-btn">About us</a></li>
-                            <li><a href="#" class="header-btn">Packages</a></li>
-                            <li><a href="#" class="header-btn">Home</a>
-                        </ul>
-                    </nav>
-                    <!-- begin head-btn -->
-                    <div class="header-btns-right">
-                            <a href="#" class="header-btn">Log In</a>
-                            <a href="#" class="header-btn sign-btn">Sign UP</a>
-                            <a href="#" class="header-btn">En</a>
-                    </div>
-                    <!-- end head-btn -->
-                </div>
-                <!-- end clearfix -->
-            </div>
-            <!-- end header -->
-            <h2 class="baner-title">Search for <br> car type name</h2>
-            <a href="#" class="header-btn started-btn">Get Started</a>
-        </div>
-        <!-- end semiopacity -->
-    </div>
-    <!-- end head-section -->
-
-       <!-- begin about-section -->
-    <div class="about-section" id ="about">
-        <h3 class="green-title">ABOUT Naql</h3>
-        <p class="about-section-des">Naql is the best search engine for finding a suitable <br> transportation method</p>
-        <!-- begin container -->
-        <div class="container">
-            <!-- begin about -->
-            <div class="about">
-            <!--begin  content clearfix-->
-            <div class=" clearfix">
-            <!-- begin about-col -->
-            <div class="about-col">
-                <div class="about-col-img" style="background-image:url(img/reg.png)"></div>
-                <div class="about-col-des">
-                    <p>Register Now! <br> it's for free</p>
-                </div>
-            </div>
-            <!-- end about-col -->
-            <div class="about-col">
-                <div class="about-col-img" style="background-image:url(img/search.png)"></div>
-                <div class="about-col-des">
-                    <p>Search using multiple <br> parameters</p>
-                </div>
-            </div>
-            <!-- end about-col -->
-            <div class="about-col">
-                <div class="about-col-img" style="background-image:url(img/clock.png)"></div>
-                <div class="about-col-des">
-                    <p>Come back again <br> we'r here all the time</p>
-                </div>
-            </div>
-            <!-- end about-col -->
-            </div>
-            <!-- end clearfix -->
-          </div>
-          <!-- end about -->
-        </div>
-        <!-- end container -->
-    </div>
-    <!-- end about-section -->
-
-    <!-- begin search-section -->
-    <div class="search-section" style="background-image:url(img/graphic.jpg)">
-                <h3 class="green-title">SEARCH</h3>
-            <!-- begin container -->
-            <div class="container">
-            <div class="styled-select slate">
-                <select >
-                    <option class="city" value="Choose city">Choose city</option>
-                    <option class="city" value="New York">New York</option>
-                    <option class="city" value="Miami">Miami</option>
-                    <option class="city" value="Los Angales">Los Angeles</option>
-                </select>
+    <!-- begin page -->
+    <div class="page">
+        <!--begin sidebar Menu -->
+        <div class="nav-right visible-xs">
+            <div class="button" id="btn">
+                <div class="bar top"></div>
+                <div class="bar middle"></div>
+                <div class="bar bottom"></div>
             </div>
         </div>
-        <!-- end container -->
-    </div>
-    <!-- end search-section -->
-
-    <!-- begin login-section -->
-    <div class="login-section">
-          <h3 class="green-title" style ="color:white;">LOGIN </h3>
-            <!-- begin container -->
-            <div class="container">
-              <form class="form-style">
-                  <input type="text" required class="form-control" placeholder="Username or mobile number">
-                  <input type="text" required class="form-control" placeholder="Password">
-                    <!-- begin check-btns -->
-                      <div class="check-btns clearfix">
- <!--                        <label class=""style="color:white;"><input type="checkbox" name="personality"> Remember me ?</label> -->
-                            <div class="squaredThree ">
-                              <input type="checkbox" value="None" id="squaredThree" name="check" checked />
-                              <label for="squaredThree">  </label>
-                              <span class="remem-padding"> Remember me ?</span>
+        <div class="main">
+            <!-- begin head-section -->
+            <div class="head-section" style="background-image:url(img/baner.jpg)">
+                <!-- begin semiopacity -->
+                <div class="semiopacity">
+                    <!-- begin header -->
+                    <div class="header">
+                        <!--begin clearfix-->
+                        <div class=" clearfix">
+                            <a href=""><h1 class="logo">Naql</h1></a>
+                            <nav class="nav-desktop">
+                                <ul>
+                                    <li><a href="#" class="header-btn">Contact us</a></li>
+                                    <li><a href="#" class="header-btn">About us</a></li>
+                                    <li><a href="#" class="header-btn">Packages</a></li>
+                                    <li><a href="#" class="header-btn">Home</a></li>
+                                </ul>
+                            </nav>
+                            <!-- begin header-btns-right -->
+                            <div class="header-btns-right">
+                                <a href="#" class="header-btn">Log In</a>
+                                <a href="#" class="header-btn sign-btn">Sign UP</a>
+                                <a href="#" class="header-btn">En</a>
                             </div>
-                            <!-- end .squaredThree -->
-                            <a class="password underline " href="">Forgot password</a>
-                      </div>
-                    <!-- end check-btns clearfix-->
-                    <div class="btn-center">
-                         <button type="submit" class="login-button">Login</button>
-                         <p style ="color:white;">Dont't have an account ? &nbsp;&nbsp;&nbsp;<a class="underline" href="">Sign Up</a></p>
-
+                            <!-- end header-btns-right -->
+                        </div>
+                        <!-- end clearfix -->
                     </div>
-             </form>
+                    <!-- end header -->
+                    <h2 class="baner-title">Search for <br> car type name</h2>
+                    <a href="#" class="header-btn started-btn">Get Started</a>
+                </div>
+                <!-- end semiopacity -->
             </div>
-            <!-- end container -->
+            <!-- end head-section -->
+            <!-- begin about-section -->
+            <div class="about-section" id="about">
+                <h3 class="green-title">ABOUT Naql</h3>
+                <p class="about-section-des">Naql is the best search engine for finding a suitable
+                    <br> transportation method</p>
+                <!-- begin container -->
+                <div class="container">
+                    <!-- begin about -->
+                    <div class="about">
+                        <!--begin  content clearfix-->
+                        <div class=" clearfix">
+                            <!-- begin about-col -->
+                            <div class="about-col">
+                                <div class="about-col-img" style="background-image:url(img/reg.png)"></div>
+                                <div class="about-col-des">
+                                    <p>Register Now!
+                                        <br> it's for free</p>
+                                </div>
+                            </div>
+                            <!-- end about-col -->
+                            <!-- begin about-col -->
+                            <div class="about-col">
+                                <div class="about-col-img" style="background-image:url(img/search.png)"></div>
+                                <div class="about-col-des">
+                                    <p>Search using multiple
+                                        <br> parameters</p>
+                                </div>
+                            </div>
+                            <!-- end about-col -->
+                            <!-- begin about-col -->
+                            <div class="about-col">
+                                <div class="about-col-img" style="background-image:url(img/clock.png)"></div>
+                                <div class="about-col-des">
+                                    <p>Come back again
+                                        <br> we'r here all the time</p>
+                                </div>
+                            </div>
+                            <!-- end about-col -->
+                        </div>
+                        <!-- end clearfix -->
+                    </div>
+                    <!-- end about -->
+                </div>
+                <!-- end container -->
+            </div>
+            <!-- end about-section -->
+            <!-- begin search-section -->
+            <div class="search-section" style="background-image:url(img/graphic.jpg)">
+                <h3 class="green-title">SEARCH</h3>
+                <!-- begin container -->
+                <div class="container">
+                    <div class="styled-select slate">
+                        <select>
+                            <option class="city" value="Choose city">Choose city</option>
+                            <option class="city" value="New York">New York</option>
+                            <option class="city" value="Miami">Miami</option>
+                            <option class="city" value="Los Angales">Los Angeles</option>
+                        </select>
+                    </div>
+                </div>
+                <!-- end container -->
+            </div>
+            <!-- end search-section -->
+            <!-- begin login-section -->
+            <div class="login-section">
+                <h3 class="green-title" style="color:white;">LOGIN </h3>
+                <!-- begin container -->
+                <div class="container">
+                    <form class="form-style">
+                        <input type="text" required class="form-control" placeholder="Username or mobile number">
+                        <input type="text" required class="form-control" placeholder="Password">
+                        <!-- begin check-btns clearfix-->
+                        <div class="check-btns clearfix">
+                            <!-- begin squaredThree -->
+                            <div class="squaredThree ">
+                                <input type="checkbox" value="None" id="squaredThree" name="check" checked />
+                                <label for="squaredThree"> </label>
+                                <span class="remem-padding"> Remember me ?</span>
+                            </div>
+                            <!-- end squaredThree -->
+                            <a class="password underline " href="">Forgot password</a>
+                        </div>
+                        <!-- end check-btns clearfix-->
+                        <div class="btn-center">
+                            <button type="submit" class="login-button">Login</button>
+                            <p style="color:white;">Dont't have an account ? &nbsp;&nbsp;&nbsp;<a class="underline" href="">Sign Up</a></p>
+                        </div>
+                    </form>
+                </div>
+                <!-- end container -->
+            </div>
+            <!-- end login-section -->
+            <!-- begin footer -->
+            <div class="footer">
+                <p style="color:white;padding-left: 10px;">Responsive Sidebar Menu by<a style="color:#00bcd4" href="https://codemyui.com/responsive-sidebar-menu/"> Antonija Simic/codemyui.com</a></p>
+            </div>
+            <!-- end footer -->
+        </div>
+        <!-- end main -->
+        <!--end sidebar Menu -->
+        <!--begin sidebar menu items -->
+        <div class="sidebar">
+            <ul class="sidebar-list">
+                <li class="sidebar-item"><a href="#" class="sidebar-anchor">Home</a></li>
+                <li class="sidebar-item"><a href="#" class="sidebar-anchor">Packages</a></li>
+                <li class="sidebar-item"><a href="#about" class="sidebar-anchor">About us</a></li>
+                <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact us</a></li>
+                <li class="sidebar-item"><a href="#" class="sidebar-anchor">Log In</a></li>
+                <li class="sidebar-item"><a href="#" class="sidebar-anchor">Sign UP</a></li>
+            </ul>
+        </div>
+        <!--end sidebar menu items -->
     </div>
-    <!-- end login-section -->
-    <!-- begin footer -->
-    <div class="footer">
-        <p style="color:white;padding-left: 10px;">Responsive Sidebar Menu by<a style="color:#00bcd4" href="https://codemyui.com/responsive-sidebar-menu/"> Antonija Simic/codemyui.com</a></p>
-    </div>
-    <!-- end footer -->
-
-
-
-
-</div>
-    <!-- end main -->
-
-<div class="sidebar">
-  <ul class="sidebar-list">
-    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Home</a></li>
-    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Packages</a></li>
-    <li class="sidebar-item"><a href="#about" class="sidebar-anchor">About us</a></li>
-    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact us</a></li>
-    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Log In</a></li>
-    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Sign UP</a></li>
-  </ul>
-</div>
-
-
-
-
-
-
-
-</div>
-<!-- end page -->
-
-  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="js/collapse.js"></script>
+    <!-- end page -->
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/collapse.js"></script>
 </body>
-</html>
 
+</html>
