fix sidebar menu adaptive

--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
                     <form class="form-style">
                         <input type="text" required class="form-control" placeholder="Username or mobile number">
                         <input type="text" required class="form-control" placeholder="Password">
-                        <!-- begin check-btns clearfix-->
-                        <div class="check-btns clearfix">
+                        <!-- begin clearfix-->
+                        <div class="clearfix">
+                        <!-- begin check-btns -->
+                        <div class="check-btns ">
                             <!-- begin squaredThree -->
                             <div class="squaredThree ">
                                 <input type="checkbox" value="None" id="squaredThree" name="check" checked />
@@ -136,12 +138,17 @@
                                 <span class="remem-padding"> Remember me ?</span>
                             </div>
                             <!-- end squaredThree -->
-                            <a class="password underline " href="">Forgot password</a>
+                            <a class="password" href="">Forgot password</a>
                         </div>
-                        <!-- end check-btns clearfix-->
+                        <!-- end check-btns -->
+                        </div>
+                        <!-- end clearfix-->
                         <div class="btn-center">
                             <button type="submit" class="login-button">Login</button>
-                            <p style="color:white;">Dont't have an account ? &nbsp;&nbsp;&nbsp;<a class="underline" href="">Sign Up</a></p>
+                            <div class="btn-description">
+                            <span>Dont't have an account ?</span>
+                            <a class="link-sign" href="#">Sign Up</a>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -150,7 +157,7 @@
             <!-- end login-section -->
             <!-- begin footer -->
             <div class="footer">
-                <p style="color:white;padding-left: 10px;">Responsive Sidebar Menu by<a style="color:#00bcd4" href="https://codemyui.com/responsive-sidebar-menu/"> Antonija Simic/codemyui.com</a></p>
+                <p class="footer-desc">Responsive Sidebar Menu by<a style="color:#00bcd4" href="https://codemyui.com/responsive-sidebar-menu/"> Antonija Simic/codemyui.com</a></p>
             </div>
             <!-- end footer -->
         </div>
