--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <!-- begin container -->
                 <div class="container">
                     <form class="form-style">
-                        <input type="text" required class="form-control" placeholder="Username or mobile number">
-                        <input type="text" required class="form-control" placeholder="Password">
+                        <input type="email" required class="form-control" placeholder="Email address">
+                        <input type="password" required class="form-control" placeholder="Password">
                         <!-- begin clearfix-->
                         <div class="clearfix">
                         <!-- begin check-btns -->
